
package Alachisoft.NCache.Common.Protobuf;

message SurrogateCommand {
	 
	optional string targetServer = 1;
	repeated bytes command = 2;
	optional int64 requestId = 3;
	optional int64 commandId = 4;
}